@@ -3297,6 +3297,7 @@ Version 1.5.3beta02 [April 2, 2011]
   Only compile the new zlib re-initializing code when text or iCCP is
     supported, using PNG_WRITE_COMPRESSED_TEXT_SUPPORTED macro.
   Improved the optimization of the zlib CMF byte (see libpng-1.2.6beta03).
+  Optimize the zlib CMF byte in non-IDAT compressed chunks
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
